<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignupContinue"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/register_patient"
        android:textColor="@color/blue"
        android:textSize="45sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.2">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/ic_baseline_local_hospital_24"/>

        <EditText
            android:id="@+id/mediName"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:inputType="text"
            android:background="@drawable/edittext_back1"
            android:hint="@string/name"
            android:paddingStart="15dp"
            android:textColorHint="#464646" />
        <EditText
            android:id="@+id/MedDays"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            android:inputType="number"
            android:background="@drawable/edittext_back1"
            android:hint="@string/age"
            android:paddingStart="15dp"
            android:textColorHint="#464646" />
        <EditText
            android:id="@+id/MedDoses"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            android:inputType="number"
            android:background="@drawable/edittext_back1"
            android:hint="@string/contact_number"
            android:paddingStart="15dp"
            android:textColorHint="#464646" />
        <EditText
            android:id="@+id/signup_days"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            android:inputType="text"
            android:background="@drawable/edittext_back1"
            android:hint="@string/course_of_days"
            android:paddingStart="15dp"
            android:textColorHint="#464646" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_background3"
            android:text="@string/register"
            android:textColor="#FBFBFB"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/link_login1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/primaryColor"
            android:gravity="center"

            android:padding="10dp"
            android:text="@string/already_have_an_account_login"
            android:textColor="#fff"
            android:textSize="18sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>