<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.Signup"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="Sign Up"
        android:textColor="@color/blue"
        android:textSize="45sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.2">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/ic_baseline_local_hospital_24"/>

        <EditText

            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:inputType="text"
            android:drawableStart="@drawable/baseline_person_24"
            android:background="@drawable/edittext_back1"
            android:hint="Email"
            android:paddingStart="15dp"
            android:textColorHint="#464646" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:layout_margin="16dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_24"
            android:background="@drawable/edittext_back1"
            android:hint="@string/password"
            android:paddingStart="15dp"
            android:textColorHint="#464646" />
        <EditText
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:layout_margin="16dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_24"
            android:background="@drawable/edittext_back1"
            android:hint="@string/confirm_password"
            android:paddingStart="15dp"
            android:textColorHint="#464646" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_background3"
            android:text="Create Account"
            android:textColor="#FBFBFB"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/link_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/blue"
            android:gravity="center"

            android:padding="10dp"
            android:text="@string/already_have_an_account_login"
            android:textColor="#fff"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>